[package]
name = "test_wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew="^0.19"
log = "0.4"
wasm-logger = "0.2.0"
wasm-bindgen = "0.2"
web-sys = {version = "0.3.60", features = ["HtmlMediaElement","HtmlAudioElement"]}
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen-futures = "0.4"
yew-hooks = "0.1.56"
dotenv_codegen = "0.15.0"
num = "0.4.0"
pipe-trait = "0.4.0"
regex = "1"